Refazendo portfolio parte 02

--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -29,6 +29,10 @@
     color: variables.$text-color
     font-weight: bold
 
+    a
+      color: variables.$text-color
+      text-decoration: none
+
   svg
     background-color: variables.$bg-color
     padding: .4rem
