--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -1,4 +1,5 @@
 @use '../variables'
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Young+Serif&display=swap')
 
 #portfolio
   display: flex
@@ -10,6 +11,7 @@
     width: 100%
     font-size: 5rem
     margin-bottom: 4rem
-    background: variables.$gradient
+    background: #fff
+    font-family: 'Young Serif', serif
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
