--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -7,8 +7,9 @@
   box-sizing: border-box
 
 body
-  background-color: variables.$body-bg-color
-
+  // background-color: variables.$body-bg-color
+  background-image: variables.$body-bg-image
+  background-size: 100%
 
 a, svg
   transition: 0.4s
