--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -2,7 +2,7 @@ $font-stack: 'Helvetica'
 $text-color: #FFF
 $text-color-secondary: #a6a6a6
 // $body-bg-color: rgba(221,36,118,1)
-$body-bg-image: url("src/img/background.jpg")
+$body-bg-image: url('../img/background.jpg')
 $bg-color: #111
 $bg-color-secondary: #1d1d1d
 $container-border-radius: 10px
